[package]
name = "tapa-cgloop-nats"
version = "0.1.0"
authors = [
    "Aditya Kresna <aditya.kresna@outlook.co.id>",
    "Tapalogi Collaborators",
]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "A collection of Tapalogi's reusable crates."
repository = "https://github.com/Tapalogi/tapa-common"
homepage = "https://crates.io/crates/tapa-evtloop-nats"
keywords = [
    "shared",
    "common",
    "reusable",
    "loop",
    "async",
]
categories = ["asynchronous"]

[dependencies]
anyhow = "1.0.38"
async-nats = "0.9.4"
bytes = "1.0.1"
futures = "0.3.12"
log = "0.4.14"
