[package]
name = "tapa-cgloop-nats"
version = "0.3.0"
authors = [
    "Aditya Kresna <aditya.kresna@outlook.co.id>",
    "Tapalogi Collaborators",
]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "A collection of Tapalogi's reusable crates."
repository = "https://github.com/Tapalogi/tapa-common"
homepage = "https://crates.io/crates/tapa-cgloop-nats"
keywords = [
    "shared",
    "common",
    "reusable",
    "loop",
    "blocking",
]
categories = ["api-bindings"]

[dependencies]
anyhow = "1.0.51"
async-trait = "0.1.52"
blocking = "1.1.0"
bytes = "1.1.0"
futures = "0.3.18"
log = "0.4.14"
nats = "0.16.0"
