[package]
name = "tapa-trait-serde"
version = "0.1.0"
authors = [
    "Aditya Kresna <aditya.kresna@outlook.co.id>",
    "Tapalogi Collaborators",
]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
description = "A collection of Tapalogi's reusable crates."
repository = "https://github.com/Tapalogi/tapa-common"
homepage = "https://crates.io/crates/tapa-trait-serde"
keywords = [
    "shared",
    "common",
    "reusable",
    "trait",
    "serde",
]
categories = ["data-structures"]

[dependencies]
anyhow = "1.0.38"
bincode = { version = "1.3.1", optional = true }
flexbuffers = { version = "0.2.2", optional = true }
serde = { version = "1.0.123", features = ["derive"] }
serde_cbor = { version = "0.11.1", features = ["tags"], optional = true }
serde_json = { version = "1.0.61", features = ["preserve_order", "arbitrary_precision"], optional = true }
serde_yaml = { version = "0.8.15", optional = true }
toml = { version = "0.5.8", features = ["preserve_order"], optional = true }

[features]
default = ["all"]
all = ["bincode", "cbor", "flexbuffers", "json", "toml", "yaml"]
cbor = ["serde_cbor"]
json = ["serde_json"]
yaml = ["serde_yaml"]
