[package]
name = "tapa-trait-serde"
version = "0.3.0"
authors = [
    "Aditya Kresna <aditya.kresna@outlook.co.id>",
    "Tapalogi Collaborators",
]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "A collection of Tapalogi's reusable crates."
repository = "https://github.com/Tapalogi/tapa-common"
homepage = "https://crates.io/crates/tapa-trait-serde"
keywords = [
    "shared",
    "common",
    "reusable",
    "trait",
    "serde",
]
categories = ["data-structures"]

[dependencies]
anyhow = "1.0.51"
bincode = { version = "1.3.3", optional = true }
flexbuffers = { version = "2.0.0", optional = true }
rmp-serde = { version = "0.15.5", optional = true }
ron = { version = "0.7.0", optional = true }
serde = { version = "1.0.131", features = ["derive"] }
serde_cbor = { version = "0.11.2", features = ["tags"], optional = true }
serde_json = { version = "1.0.72", features = ["preserve_order", "arbitrary_precision"], optional = true }
serde_yaml = { version = "0.8.21", optional = true }
tapa-trait-serde-derive = "0.3.0"
toml = { version = "0.5.8", features = ["preserve_order"], optional = true }

[features]
default = ["all"]
all = ["bincode", "cbor", "flexbuffers", "json", "msgpack", "ron", "toml", "yaml"]
cbor = ["serde_cbor"]
json = ["serde_json"]
msgpack = ["rmp-serde"]
yaml = ["serde_yaml"]
